--- a/views/print.css
+++ b/views/print.css
@@ -1,22 +1,26 @@
+/* Based on the Sample style sheet for boom!, the book microformat by Hakon Wium Lie and Bert Bos, November 2005 */
+/* You may reuse this style sheet for any purpose without any fees */
+
 html { 
   margin: 0;
-  font: 10pt/1.26 "Gill Sans", sans-serif;
+  font: 10pt/1.26 "Bookman Old Style", sans-serif;
 }
 
 body { 
-  margin: 0 6% 0 10%;
+  margin: 0 7%;
 }
 
 h1, h2, h3, h4, h5, h6 { 
-  font-family: "Gill Sans", sans-serif;
+  font-family: "Bookman Old Style", sans-serif;
   margin: 2em 0 0.5em 0;
   page-break-after: avoid;
 } 
 
 h1 { 
-  padding: 2em 0 2em 0;
+  padding: 2em 0 1.5em 0;
   margin: 0;
-  font-size: 2.4em;
+  font-size: 2em; 
+  line-height:1.1em;
   font-weight: 900;
 }
 
@@ -43,10 +47,10 @@ q::after {
   content: "\201D";
 }
 
-p { margin: 0 0 1em 0 }
+p { margin: 0 }
 p + p { text-indent: 1.3em }
 p.sidenote + p, p.caption, p.art { text-indent: 0 } 
-img {border: 1px solid #CCC; margin: 10px auto; clear: both; padding 20px;}
+
 br {
 	margin:0 0 1em 0;
 	display:block;
@@ -80,12 +84,14 @@ a { text-decoration: none; color: black }
 /* IE7 */
 .clr {overflow:hidden;/*method for clearing floats*/}
 
-	
-.imprint img {
-float:left;
-margin-right:1em;
-padding-top:4px;
-}           
+.imprint p.commons {font-weight:bold;}
+.imprint ul.license-properties {margin:1em 0 0 0;padding:0;}	
+.imprint ul.license-properties ul {margin:0.5em 0;}
+.imprint ul.license-properties li {
+	list-style-type:none;
+	font-size:9pt;  
+	margin:0 0 0.5em 0;
+}        
 
 @page {
   margin: 27mm 16mm 27mm 16mm;
@@ -95,7 +101,7 @@ padding-top:4px;
     border-top: thin solid black;
     padding-top: 0.3em;
     margin-top: 0.6em;
-    margin-left: 30%;
+    margin-left: 7%;
   }
 }
 
@@ -104,14 +110,15 @@ padding-top:4px;
 
 @page :left {
   @top-left {
-    font: 11pt "Gill Sans", serif;
-    content: "Delicious pdf";
+    font: 8pt "Bookman Old Style", serif;
+    content: "A delicious pdf";
+	font-style:italic;
     vertical-align: bottom;
     padding-bottom: 2em;
   }
 
   @bottom-left {
-    font: 11pt "Gill Sans", serif;
+    font: 8pt "Bookman Old Style", serif;
     content: counter(page);
     padding-top: 2em;
     vertical-align: top;
@@ -120,14 +127,15 @@ padding-top:4px;
 
 @page :right {
   @top-right {
-    font: 11pt "Gill Sans", serif;
+    font: 8pt "Bookman Old Style", serif;    
+	font-style:italic;
     content: string(header, first); 
     vertical-align: bottom;
     padding-bottom: 2em; 
   }
 
   @bottom-right {
-    font: 11pt "Gill Sans", serif;
+    font: 8pt "Bookman Old Style", serif;
     content: counter(page);
     text-align: right;
     vertical-align: top;
@@ -137,14 +145,15 @@ padding-top:4px;
 
 @page frontmatter :left {
   @top-left {
-    font: 11pt "Gill Sans", serif;
+    font: 8pt "Bookman Old Style", serif; 
+	font-style:italic;  
     content: string(title);
     vertical-align: bottom;
     padding-bottom: 2em;
   }
 
   @bottom-left {
-    font: 11pt "Gill Sans", serif;
+    font: 8pt "Bookman Old Style", serif;
     content: counter(page, lower-roman);
     padding-top: 2em;
     vertical-align: top;
@@ -152,17 +161,20 @@ padding-top:4px;
 }
 
 @page cover { margin: 0; }
+@page backcover { margin: 0; }  
 
 @page frontmatter :right {
   @top-right {
-    font: 11pt "Gill Sans", serif;
+    font: 8pt "Bookman Old Style", serif; 
+    font-style:italic;  
     content: string(header, first); 
     vertical-align: bottom;
     padding-bottom: 2em; 
   }
 
   @bottom-right {
-    font: 11pt "Gill Sans", serif;
+    font: 8pt "Bookman Old Style", serif; 
+	font-style:italic;  
     content: counter(page, lower-roman);
     text-align: right;
     vertical-align: top;
@@ -234,15 +246,15 @@ padding-top:4px;
 
 /* which section uses which named page */
 
-div.halftitlepage, div.titlepage, div.imprint, div.dedication { page: blank }
-div.foreword, div.toc, div.preface { page: frontmatter }
+div.halftitlepage, div.titlepage, div.imprint, div.dedication, div.blank { page: blank }
+div.foreword, div#toc, div.preface { page: frontmatter }
 
 
 /* page breaks */
 
-div.frontcover, div.halftitlepage, div.titlepage { page-break-before: right }
-div.imprint { page-break-before: always }
-div.dedication, div.foreword, div.toc, div.preface, div.chapter, div.reference, 
+div.frontcover, div.halftitlepage, div.titlepage, div.backcover { page-break-before: right }
+div.imprint, div.blank { page-break-before: always }
+div.dedication, div.foreword, div.preface, div.chapter, div.reference, 
 div.appendix, div.bibliography, div.glossary, div.index, div.colophon { 
   page-break-before: always 
 }
@@ -250,11 +262,12 @@ div.backcover { page-break-before: left }
 
 /* the front cover; this code is probably not very reusable by other books */
 
-div.frontcover { page: cover; }
+div.frontcover { page: cover; }   
+ 
 
 div.frontcover img {
   position: absolute;
-  width: 7in; height: 9.25in;
+  width: 6in; height: 9in; 
   left: 0; top: 0;
   z-index: -1;
 }
@@ -269,12 +282,11 @@ div.frontcover h1 {
 
 div.frontcover h2 {
   position: absolute;
-  right: 0; top: 5cm;
-  color: black;
-  background: white;
+  left: 2cm; top: 5cm;
+  color: white;  
   font-size: 16pt;
   font-weight: normal;
-  padding: 0.2em 5em 0.2em 1em;
+  padding: 0;
   letter-spacing: 0.15em;
 }
 
@@ -293,6 +305,15 @@ div.frontcover p {
   color: black;
   font-weight: bold;
   text-transform: uppercase;
+}   
+
+
+div.backcover { page: backcover;  }    
+div.backcover img {
+  position: absolute;
+  width: 6in; height: 9in; 
+  left: 0; top: 0;
+  z-index: -1;
 }
 
 
@@ -317,7 +338,7 @@ ul.toc {
 ul.toc ul { 
   margin: 0 0 0 1em; 
   padding: 0;
-    font-weight: normal;     
+  font-weight: normal;     
 }
 ul.toc > li { 
   font-weight: bold;
@@ -338,7 +359,7 @@ ul.toc > li.endmatter a::after {
 ul.toc > li.chapter::before {
   content: "Chapter " counter(toc-chapter, decimal);
   display: block;
-  margin: 1em 0 0.1em -1.5cm;
+  margin: 1.5em 0 0.1em 0cm;
   font-weight: normal;
   counter-increment: toc-chapter;
   page-break-after: avoid;
@@ -346,13 +367,20 @@ ul.toc > li.chapter::before {
 
 /* chapter numbers */
 
-div.chapter { counter-increment: chapter; }
+div.chapter { counter-increment: chapter; }  
+            
+/*images*/
+div.chapter img {display:block;margin:1cm;border:0.25cm solid #333333;max-width:4in;clear:both;}
+ 
+/*exceptions*/
+.commenter-profile img, .commenter-profile, img.bug {dispaly:none;}   
+
 
 h1::before {
   white-space: pre;
-  margin-left: -1.5cm;
+  margin-left: 0;
   font-size: 50%;
-  content: "\B0  \B0  \B0  \B0  \B0 \A";  /* ornaments */
+  content: " \A";  /* ornaments */
 }
 
 div.chapter h1::before { content: "Chapter " counter(chapter) " \A"; }
@@ -373,14 +401,37 @@ ul.index {
   column-gap: 1em;
 }
 
-
+ul.index a::after { content: ", " target-counter(attr(href), page); }
+ul.index li a {font-size:1em;}
 
 @media screen, handheld {
-  html { margin: 1em; font: 14px "Gill Sans", sans-serif; }
-  h1 { margin-bottom: 0.5em }
+  html { margin: 1em; font: 14px "Bookman Old Style", sans-serif; }  
+  span.logo {position:absolute;top:5em;font-weight:bold;}
+  h1 { margin-bottom: 0.5em; padding-bottom:0; } 
+  #content {width:650px;} 
+  p {padding:0 0 1.5em 0;}
+  p + p { text-indent: 0 }
   div.frontcover, div.halftitlepage, div.titlepage, div.imprint, 
-  div.dedication, div.foreword, div.toc, div.index { display: none }
-}
+  div.dedication, div.foreword, div#toc, div.index { display: none }  
+  #feedurl {width:500px;padding:10px;} 
+  .button{display:inline-block;zoom:1;/* zoom and *display = ie7 hack for display:inline-block */
+	*display:inline;vertical-align:baseline;border:0;margin:20px 0 30px 0;outline:none;cursor:pointer;text-align:center;text-decoration:none;font:14px/100% Arial,Helvetica,sans-serif;padding:.5em 2em .55em;/*change to adjust size of button*/
+	text-shadow:0 1px 1px rgba(0,0,0,.3);-webkit-border-radius:.5em;-moz-border-radius:.5em;border-radius:.5em;-webkit-box-shadow:0 1px 2px rgba(0,0,0,.2);-moz-box-shadow:0 1px 2px rgba(0,0,0,.2);box-shadow:0 1px 2px rgba(0,0,0,.2);}
+
+	.button:hover{text-decoration:none;}
+	.button:active{position:relative;top:1px;}
+	a.button, a:link.button {color:#fff;}   
+	
+	/* black */
+	.black{color:#d7d7d7;border:solid 1px #333;background:#333;background:-webkit-gradient(linear,left top,left bottom,from(#666),to(#000));background:-moz-linear-gradient(top,#666,#000);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#666666',endColorstr='#000000');}
+	.black:hover{background:#000;background:-webkit-gradient(linear,left top,left bottom,from(#444),to(#000));background:-moz-linear-gradient(top,#444,#000);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#444444',endColorstr='#000000');}
+	.black:active{color:#666;background:-webkit-gradient(linear,left top,left bottom,from(#000),to(#444));background:-moz-linear-gradient(top,#000,#444);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000',endColorstr='#666666');}
+	/* blue */
+	.blue{color:#d9eef7;border:solid 1px #0076a3;background:#0095cd;background:-webkit-gradient(linear,left top,left bottom,from(#00adee),to(#0078a5));background:-moz-linear-gradient(top,#00adee,#0078a5);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#00adee',endColorstr='#0078a5');}
+	.blue:hover{background:#007ead;background:-webkit-gradient(linear,left top,left bottom,from(#0095cc),to(#00678e));background:-moz-linear-gradient(top,#0095cc,#00678e);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0095cc',endColorstr='#00678e');}
+	.blue:active{color:#80bed6;background:-webkit-gradient(linear,left top,left bottom,from(#0078a5),to(#00adee));background:-moz-linear-gradient(top,#0078a5,#00adee);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0078a5',endColorstr='#00adee');}
+}   
+
 /*TOC */
 
 #toc a::after { content: leader(".") target-counter(attr(href), page); } 
