--- a/views/index.haml
+++ b/views/index.haml
@@ -12,11 +12,13 @@
       %form{ :action => "/", :method => "post"}
         %h3 Feed URL
         %input{ :name => "feedurl", :type => "text", :id => "feedurl"}
-        / %h3 delicious username
-        / %input{ :name => "dname", :type => "text", :id => "dname"}
-        / %h3 Feed delicious pass  
-        / %input{ :name => "dpass", :type => "text", :id => "dpass"}
-        %input{ :type => "submit", :class => "button blue", :value => "Create a book"}
+        %h3 delicious username
+        %input{ :name => "dname", :type => "text", :id => "dname"}
+        %h3 Feed delicious pass  
+        %input{ :name => "dpass", :type => "password", :id => "dpass"}
+        %p 
+          %input{ :type => "submit", :class => "button blue", :value => "Create a book"}
         %p Welcome to Bookler, basically a personal POD service (print on demand) for your saved long format articles. To create your own pdf (lulu ready) simply paste your Delicious or Instapaper rss feed url below (e.g. http://feeds.delicious.com/v2/rss/felixcohen/readlater?count=15) click the button. Done. You will be prompted to save the pdf (or you should be, but that's broken at the moment and we totally don't have the $ for a Prince server licence, so save your HTML and follow the instructions on the Bookler github page)
         %p Note, this is indended to be for articles for which you have the rights to print, it may require seeking permission from the rights holder.
+        %p If you pop your Delicious user details in, the app will retag your existing bookmarks being fed in to be tagged 'madeintoabook'. In a totally destructive fashion, so you know, be careful.
           
