--- a/views/book.haml
+++ b/views/book.haml
@@ -20,5 +20,5 @@
         %h2
           %a(name=id)
             = chapter['title']
-        %p 
-          = chapter['content']
+        .clear 
+        = chapter['content']
