--- a/views/book.haml
+++ b/views/book.haml
@@ -7,18 +7,20 @@
   %body
     #toc
       %ul
-      -for chapter in @chapters
-        -id= Digest::MD5.hexdigest(chapter['title'])
-        %li
-          -anchor='#'+id
-          %h2
-            %a(href=anchor) 
-              = chapter['title']
+        -for chapter in @chapters
+          -if(chapter['title'])
+            -id= Digest::MD5.hexdigest(chapter['title'])
+            %li
+              -anchor='#'+id
+              %h2
+                %a(href=anchor) 
+                  = chapter['title']
     -for chapter in @chapters
-    -id= Digest::MD5.hexdigest(chapter['title'])
-      .chapter
-        %h2
-          %a(name=id)
-            = chapter['title']
+      -if(chapter['title'])
+        -id= Digest::MD5.hexdigest(chapter['title'])
+        .chapter
+          %h2.chaptertitle
+            %a(name=id)
+              = chapter['title']
         .clear 
-        = chapter['content']
+      = chapter['content']
