print stylesheet reference

--- a/views/book.haml
+++ b/views/book.haml
@@ -3,7 +3,7 @@
 %html{:xmlns => "http://www.w3.org/1999/xhtml", "xml:lang" => "en", :lang => "en"}
   %head
     %title Bookler
-    %link{ :href => "/print.css", :rel => "stylesheet", :type => "text/css"}
+    %link{ :href => "/stylesheets/print.css", :rel => "stylesheet", :type => "text/css"}
   %body
     %header
       %nav
