--- a/views/index.haml
+++ b/views/index.haml
@@ -1,24 +1,59 @@
-!!! XML
-!!!
-%html{:xmlns => "http://www.w3.org/1999/xhtml", "xml:lang" => "en", :lang => "en"}
-  %head
-    %title Create a book from your feeds
-    %link{ :href => "/print.css", :rel => "stylesheet", :type => "text/css"}
-  %body
-    #content
-      .title
-        %span{:class => "logo"} Bookler 1.0
-        %h1 What's your feed? 
-      %form{ :action => "/", :method => "post"}
-        %h3 Feed URL
-        %input{ :name => "feedurl", :type => "text", :id => "feedurl"}
-        %h3 delicious username
-        %input{ :name => "dname", :type => "text", :id => "dname"}
-        %h3 Feed delicious pass  
-        %input{ :name => "dpass", :type => "password", :id => "dpass"}
-        %p 
-          %input{ :type => "submit", :class => "button blue", :value => "Create a book"}
-        %p Welcome to Bookler, basically a personal POD service (print on demand) for your saved long format articles. To create your own pdf (lulu ready) simply paste your Delicious or Instapaper rss feed url below (e.g. http://feeds.delicious.com/v2/rss/felixcohen/readlater?count=15) click the button. Done. You will be prompted to save the pdf (or you should be, but that's broken at the moment and we totally don't have the $ for a Prince server licence, so save your HTML and follow the instructions on the Bookler github page)
-        %p Note, this is intended to be for articles for which you have the rights to print, it may require seeking permission from the rights holder.
-        %p If you pop your Delicious user details in, the app will retag your existing bookmarks being fed in to be tagged 'madeintoabook'. In a totally destructive fashion, so you know, be careful.
-          
+!!! 5
+%html(lang="en")
+	%head
+		%title Bookler
+		%link{:rel => 'stylesheet', :href => '../bootstrap.css', :type => "text/css"}
+		%link{:rel => 'stylesheet', :href => '../launch.css', :type => "text/css"}
+
+	%body
+		.topbar
+			.fill
+				.container
+					%a{:class => "brand", :href => ""}Bookler
+					%ul(class="nav")
+						%li(class="active")
+							%a(href = "/") Home
+						%li
+							%a(href = "/about") About
+						%li
+							%a(href = "mailto:felix@felixcohen.co.uk") Contact
+
+		.container
+			.content
+				.page-header
+					%h1 
+						Bookler
+						%small &nbsp;read your feed
+				.row
+					.span8
+						%h2 Make your book
+						%form{ :action => "/", :method => "post"}
+							.clearfix
+							%label Feed URL
+							.input
+								%input{ :name => "feedurl", :class => "", :type => "text", :id => "feedurl"}
+							.clearfix
+							%label delicious username
+							.input
+								%input{ :name => "dname", :class => "", :type => "text", :id => "dname"}
+							.clearfix
+							%label Feed delicious pass
+							.input
+								%input{ :name => "dpass", :class => "", :type => "password", :id => "dpass"}
+							.clearfix
+							%input{ :type => "submit", :class => "btn primary large", :value => "Create a book"}
+					.span6
+						%h3 What?
+						%p Welcome to Bookler, basically a personal POD service (print on demand) for your saved long format articles. To create your own pdf (lulu ready) simply paste your Delicious or Instapaper rss feed url below (e.g. http://feeds.delicious.com/v2/rss/felixcohen/readlater?count=15) click the button. Done. You will be prompted to save the pdf (or you should be, but that's broken at the moment and we totally don't have the $ for a Prince server licence, so save your HTML and follow the instructions on the about page)
+						%p Note, this is intended to be for articles for which you have the rights to print, it may require seeking permission from the rights holder.
+						%p If you pop your Delicious user details in, the app will retag your existing bookmarks being fed in to be tagged 'madeintoabook'. In a totally destructive fashion, so you know, be careful.
+
+
+
+			%footer
+				%p
+					A 
+					%a(href = "http://felixcohen.co.uk") Felix Cohen
+					&
+					%a(href = "http://www.dogwonder.co.uk") Rich Holman
+					production.
