--- a/views/about.haml
+++ b/views/about.haml
@@ -15,6 +15,8 @@
 							%a(href = "/") Home
 						%li(class="active")
 							%a(href = "/about") About
+						%li(class="")
+							%a(href = "/books") Books
 						%li
 							%a(href = "mailto:felix@felixcohen.co.uk") Contact
 
