--- a/views/index.haml
+++ b/views/index.haml
@@ -15,6 +15,8 @@
 							%a(href = "/") Home
 						%li
 							%a(href = "/about") About
+						%li(class="")
+							%a(href = "/books") Books
 						%li
 							%a(href = "mailto:felix@felixcohen.co.uk") Contact
 
@@ -27,19 +29,15 @@
 				.row
 					.span8
 						%h2 Make your book
-						%form{ :action => "/", :method => "post"}
+						%form{ :action => "/book", :method => "post"}
 							.clearfix
 							%label Feed URL
 							.input
 								%input{ :name => "feedurl", :class => "", :type => "text", :id => "feedurl"}
 							.clearfix
-							%label delicious username
+							%label Title
 							.input
-								%input{ :name => "dname", :class => "", :type => "text", :id => "dname"}
-							.clearfix
-							%label Feed delicious pass
-							.input
-								%input{ :name => "dpass", :class => "", :type => "password", :id => "dpass"}
+								%input{ :name => "title", :class => "", :type => "text", :id => "title"}
 							.clearfix
 							%input{ :type => "submit", :class => "btn primary large", :value => "Create a book"}
 					.span6
