--- a/views/chapters.haml
+++ b/views/chapters.haml
@@ -3,7 +3,7 @@
 %html{:xmlns => "http://www.w3.org/1999/xhtml", "xml:lang" => "en", :lang => "en"}
 	%head
 		%title
-			= book_title
+			= @title
 		%link{ :href => "/print.css", :rel => "stylesheet", :type => "text/css"}
 	%body
 		#toc
